# Shoora

./: .clangd  .gitignore  CMakeLists.txt  README.md  vulkaninfo.txt
assets/: app_dump.txt  debug.txt  imgui.ini  write_test.txt
assets/cookbook_shaders/: 01_vertex_shader_comesFirstInTheRenderingPipeline.vert  02a_tessellation_control_shader_comesAfterTheVertexShader.tesc  02b_tessellation_evaluation_shader.tese
assets/shaders/: blinn-phong.frag.glsl  blinn-phong.vert.glsl  checkerboard.frag.glsl  checkerboard.vert.glsl  sponza.frag.glsl  sponza.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  unlit.frag.glsl  unlit.vert.glsl  wireframe.frag.glsl  wireframe.vert.glsl
build_scripts/windows/: _variables.ps1  build_cmake.ps1  build_shaders.ps1  run_project.ps1
cmake_macros/: prac.cmake
debugger_profiler_stuff/renderdoc/: capture-depth-buffer-bug.rdc
engine/: CMakeLists.txt  defines.h  win_platform.h
engine/camera/: camera.cpp  camera.h
engine/containers/: dynamic_array.h
engine/containers/hashtable/: hashtable.cpp  hashtable.h  hashtable_strstr.cpp  hashtable_strstr.h
engine/containers/linked_list/: double_linked_list.h  double_linked_list_impl.h  linked_list.h  linked_list_impl.h
engine/containers/stack/: stack.h
engine/interpreter/: lex.cpp
engine/loaders/image/: image_loader.cpp  image_loader.h  jpeg_loader.cpp  jpeg_loader.h  png_loader.cpp  png_loader.h
engine/loaders/meshes/: gltf_parser_custom.cpp  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h
engine/main/: main.cpp  win_main.cpp
engine/math/: linear_equations_solver.h  math.h  math_barycentric.cpp  math_barycentric.h  math_matrix.cpp  math_matrix.h  math_matrix_transforms.cpp  math_matrix_transforms.h  math_quaternion.cpp  math_quaternion.h  math_rect2d.h  math_trig.h  math_vector.cpp  math_vector.h
engine/memory/: freelist_allocator.cpp  freelist_allocator.h  memory.cpp  memory.h  memory_utils.h
engine/mesh/: convex_hull_2d.cpp  mesh_filter.h  mesh_utils.h
engine/mesh/database/: mesh_database.cpp  mesh_database.h
engine/mesh/primitive/: geometry_primitive.cpp  geometry_primitive.h
engine/physics/: body.cpp  body.h  bounds.cpp  bounds.h  broadphase.cpp  broadphase.h  collision.cpp  collision.h  constraint.cpp  constraint.h  constraint_ball.cpp  constraint_cone_twist.cpp  constraint_fixed.cpp  constraint_hinge.cpp  constraint_hinge_quat.cpp  constraint_hinge_swing_twist.cpp  constraint_joint.cpp  constraint_penetration.cpp  constraint_slider.cpp  constraint_slider_limit.cpp  contact.cpp  contact.h  contact_manifold.cpp  contact_manifold.h  epa.cpp  epa.h  force.cpp  force.h  gjk.cpp  gjk.h  particle.cpp  particle.h  shape.cpp  shape.h  shape_convex_hull.cpp  shape_cube.cpp  signed_volumes.cpp  signed_volumes.h  tetrahedron.cpp  tetrahedron.h
engine/physics/concepts/: concepts.md
engine/physics/primitive_tests/: primitive_tests.h
engine/physics/shape/: shape.cpp  shape.h  shape_box.cpp  shape_circle.cpp  shape_convex.cpp  shape_convex.h  shape_cube.cpp  shape_polygon.cpp  shape_sphere.cpp
engine/platform/: platform.h
engine/platform/windows/: win_platform.h
engine/random/: random.cpp  random.h
engine/renderer/: renderer_frontend.cpp  renderer_frontend.h
engine/renderer/material/: material.cpp  material.h
engine/renderer/vulkan/: __example.cpp  __example.h  _vulkan_renderer.cpp  _vulkan_renderer.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_defines.h  vulkan_descriptor_sets.cpp  vulkan_descriptor_sets.h  vulkan_device.cpp  vulkan_device.h  vulkan_draw.cpp  vulkan_draw.h  vulkan_drawing.cpp  vulkan_drawing.h  vulkan_geometry.cpp  vulkan_geometry.h  vulkan_image.cpp  vulkan_image.h  vulkan_imgui.cpp  vulkan_imgui.h  vulkan_input_info.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shaders.cpp  vulkan_shaders.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_synchronization.cpp  vulkan_synchronization.h  (+4 more)
engine/renderer/vulkan/graphics/: vulkan_graphics.cpp  vulkan_graphics.h
engine/renderer/vulkan/scene/: vulkan_scene.cpp  vulkan_scene.h
engine/shox/: lexer.cpp  scanner.cpp  shox.h  token.cpp
engine/utils/: string_utils.cpp  string_utils.h  utils.cpp  utils.h
engine/utils/random/: random.cpp  random.h
engine/utils/sort/: sort.h
game/: CMakeLists.txt  main_vulkan_template.txt  shoora_game.cpp  shura_game.cpp  shura_game.h
python_stuff/: CMakeLists.txt  build.ps1  numpy_integration.cpp
python_stuff/numpy-practice/: practice.py
src/: CMakeLists.txt  win_main.cpp
(+5 files in other folders)
