cmake_minimum_required(VERSION 3.22.0)

project(ShooraGame)

file(GLOB_RECURSE SRC_FILES     LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c *.cpp)
file(GLOB_RECURSE HEADER_FILES  LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h *.hpp)


if(NOT MSVC)
    get_filename_component(GAME_PROJECT_FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
    set(GAME_BIN_DIR ${CMAKE_BINARY_DIR}/${GAME_PROJECT_FOLDER_NAME}/${CMAKE_BUILD_TYPE})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GAME_BIN_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${GAME_BIN_DIR})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GAME_BIN_DIR})
endif()


if(NOT SRC_FILES STREQUAL "")
    add_library(ShooraGame SHARED ${SRC_FILES} ${HEADER_FILES})
    set_property(TARGET ShooraGame PROPERTY CXX_STANDARD 11)
endif()
